<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="horizontal">
    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <RadioButton
            android:id="@+id/btn_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_green50"
            android:checked="true"
            android:text="@string/to_do2"
            android:textColor="#546E7A"
            android:textSize="17sp"/>

        <RadioButton
            android:id="@+id/btn_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="@string/habit"
            android:textColor="#546E7A"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/btn_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/event"
            android:textColor="#546E7A"
            android:textSize="17sp" />
    </RadioGroup>

</LinearLayout>