<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".others.NewActivity">
    <!--title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="#72A33E"
        android:paddingHorizontal="16dp"
        android:paddingBottom="3dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="24sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/add_date"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="end"
            android:textSize="16sp"
            android:textColor="@color/white"/>
    </RelativeLayout>
    <include layout="@layout/edits" />
    <include layout="@layout/tags" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/add_cal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_twotone_calendar_month_24"
            android:backgroundTint="#75A619"
            android:contentDescription="@string/calendar"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/add_clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/ic_round_clear_24"
            android:backgroundTint="#75A619"
            android:contentDescription="@string/clear"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/add_save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_round_done_24"
            android:backgroundTint="#75A619"
            android:contentDescription="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>