<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:autofillHints=""
        android:backgroundTint="#D4E3C4"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:singleLine="true"
        android:textColorHint="#546E7A"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_start"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:backgroundTint="#D4E3C4"
                android:hint="@string/start_time"
                android:importantForAutofill="no"
                android:inputType="date"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorHint="#546E7A"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
            <Button
                android:id="@+id/btn_start"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_twotone_calendar_month_24"
                android:backgroundTint="#AED581"
                android:contentDescription="@string/start_time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_time"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:backgroundTint="#D4E3C4"
                android:hint="@string/alarm_time"
                android:importantForAutofill="no"
                android:inputType="time"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorHint="#546E7A"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_round_alarm_24"
                android:backgroundTint="#AED581"
                android:contentDescription="@string/alarm_time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_end"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:backgroundTint="#D4E3C4"
                android:hint="@string/end_time"
                android:inputType="date"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorHint="#546E7A"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_end"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_twotone_calendar_month_24"
                android:backgroundTint="#AED581"
                android:contentDescription="@string/end_time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_repeat"
                android:layout_width="130dp"
                android:layout_height="53dp"
                android:backgroundTint="#D4E3C4"
                android:hint="@string/repeat"
                android:inputType="number"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorHint="#546E7A"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginHorizontal="11dp"
        android:layout_marginVertical="7dp"
        android:background="@drawable/border_note"
        android:hint="@string/note"
        android:inputType="none"
        android:gravity="top"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:autofillHints="note" />
</LinearLayout>